--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,31 +1,18 @@
 {
-    "env": {
-        "browser": false,
-        "commonjs": true,
-        "es6": true,
-        "node": true
+  "env": { "browser": false, "commonjs": true, "es6": true, "node": true },
+  "extends": ["eslint:recommended"],
+  "parserOptions": { "ecmaVersion": 2018, "sourceType": "module" },
+  "plugins": ["babel"],
+  "rules":
+    {
+      "no-unused-vars": ["error", { "caughtErrorsIgnorePattern": "^ignore" }],
+      "linebreak-style": ["error", "unix"],
+      "babel/new-cap": 1,
+      "babel/camelcase": 1,
+      "babel/no-invalid-this": 1,
+      "babel/object-curly-spacing": 1,
+      "babel/semi": 1,
+      "babel/no-unused-expressions": 1,
+      "babel/valid-typeof": 1,
     },
-    "extends": ["eslint:recommended"],
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "babel"
-    ],
-    "rules": {
-        "no-unused-vars": ["error", { "caughtErrorsIgnorePattern": "^ignore" }],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "babel/new-cap": 1,
-        "babel/camelcase": 1,
-        "babel/no-invalid-this": 1,
-        "babel/object-curly-spacing": 1,
-        "babel/semi": 1,
-        "babel/no-unused-expressions": 1,
-        "babel/valid-typeof": 1
-
-    }
 }
