--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/Deniskakaka/fullstack-javascript-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Deniskakaka/fullstack-javascript-project-44/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,20 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/games/brain-even.js",
-    "brain-calc": "bin/games/brain-calc.js"
+    "brain-calc": "bin/games/brain-calc.js",
+    "brain-gcd": "bin/games/brain-gcdjs"
+  },
+  "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.1.2",
+    "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
