add progression game

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/games/brain-even.js",
     "brain-calc": "bin/games/brain-calc.js",
-    "brain-gcd": "bin/games/brain-gcdjs"
+    "brain-gcd": "bin/games/brain-gcd.js",
+    "barain-progression": "big/games/brain-progression.js"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
